2016-03-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (DestroyImage): Simply return if image is NULL
	since it is more user-friendly.

	* magick/shear.c (RotateImage): Fix Coverity issue 124519
	"Logically dead code".

	* magick/effect.c (BlurImage): Fix Coverity issue 124520
	"Dereference after null check".

	* coders/pdb.c (WritePDBImage): Fix SourceForge bug #360
	"out-of-bounds read in utilities/gm+0x80fcc71) (PDB reader)".

	* coders/meta.c (convertHTMLcodes): Fix SourceForge bug #373
	"out-of-bounds read in coders/meta.c:444:50"
	(ReadMETAImage): Fix SourceForge bug #364 "out-of-bounds write in
	coders/meta.c:1331:7".

2016-03-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sgi.c (ReadSGIImage): Fix SourceForge bug #366
	"out-of-bounds write in coders/sgi.c:528:4" and bug #369
	"out-of-bounds write in coders/sgi.c:535:4".

	* coders/rle.c (ReadRLEImage): Fix SourceForge bug #371
	"out-of-bounds read in coders/rle.c:633:39".

2016-03-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dib.c (ReadDIBImage): Fix SourceForge bug #367
	"out-of-bounds read in coders/dib.c:706:13" and bug #370
	"out-of-bounds read in coders/dib.c:716:15".

	* coders/pict.c (ReadPICTImage): Fix SourceForge bug #365
	"out-of-bounds read in magick/image.c:1305:3"

	* magick/utility.c (GetPageGeometry): Fix SourceForge bug #374
	"out-of-bounds write in magick/utility.c:4355:7"

2016-03-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Fix SourceForge bug #376 "SIGABRT
	in magick/colorspace.c:1052".

	* magick/shear.c (RotateImage): Fix SourceForge bug #375 "SIGABRT
	in magick/image.c:1230".

	* coders/sun.c (DecodeImage): Fix SourceForge bug #368
	"out-of-bounds read in coders/sun.c:223:17" and bug #363
	"out-of-bounds read in coders/sun.c:221:16".

2016-03-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c (GetUserSpaceCoordinateValue): Fix stack buffer